name:                mapman
version:             0.0.0.0
license-file:        LICENSE
author:              Dennis Hilhorst & Youri Mulder
maintainer:          .
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       containers -any,
                       unordered-containers -any,
                       gloss, 
                       random -any
  hs-source-dirs:      src
  other-modules:       Controller, Maze, Ghosts, Model, View, Pacman, ViewMaze, ViewGhost, State
  default-language:    Haskell2010