name:                mapman
version:             0.0.0.0
license-file:        LICENSE
author:              Dennis Hilhorst & Youri Mulder
maintainer:          .
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       directory,
                       containers -any,
                       unordered-containers -any,
                       gloss, 
                       random -any,
                       aeson
  hs-source-dirs:      src
  other-modules:       Controller, Maze, Ghosts, ControllerGhosts, Model, View, ControllerPacMan, ViewPacMan, ViewMaze, ViewGhost, State, Serial
  default-language:    Haskell2010