name:                mapman
version:             0.0.0.0
license-file:        LICENSE
author:              Dennis Hilhorst & Youri Mulder
maintainer:          .
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable mapman
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       directory,
                       bytestring,
                       containers -any,
                       unordered-containers -any,
                       gloss, 
                       random -any,
                       aeson,
                       aeson-pretty
  hs-source-dirs:      src, src/Model, src/Controller, src/View
  other-modules:       Model, ModelBase, ModelGhost, ModelMaze, ModelPacMan, ModelWindow, Controller, ControllerPacMan, ControllerGhost, View, Maze, ViewPacMan, ViewMaze, ViewGhost, State, Serial
  default-language:    Haskell2010